--- a/index.html
+++ b/index.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    
     <title>果色生香 厉酒弥坚</title>
-    <style type="text/css">
-      @import url(css/lunbo.css);
-      @import url(css/zy_style.css);
-    </style>
-    <script src="js/new_file.js" defer></script>
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script
-      type="text/javascript"
-      language="javascript"
-      src="js/lunbo.js"
-    ></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+
   </head>
 
-  <body
-    background="https://c-ssl.dtstatic.com/uploads/item/201703/05/20170305095943_VWTai.thumb.1000_0.jpeg"
-  ><div class="box">
+  <body>
+    <div class="box">
     
         <a href="" class = 'left jiantou'>&lt;</a>
         <a href="" class = 'right jiantou'>&gt;</a>
         <ul class = 'pic'>
             <li>
-                <a href="#"><img src="./images/1.jpg" alt=""></a>
+                <a href="#"><img src="https://img.zcool.cn/community/01b35b5d847bcca8012060bece64f7.jpg@2o.jpg" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="./images/2.jpg" alt=""></a>
+                <a href="#"><img src="https://img.zcool.cn/community/01f8a75da96a03a8012163baf3c67d.jpg@1280w_1l_2o_100sh.jpg" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="./images/3.jpg" alt=""></a>
+                <a href="#"><img src="https://pica.zhimg.com/b4f511d06fd8d7394d846f47ebb8b260_r.jpg?source=1940ef5c" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="./images/4.jpg" alt=""></a>
+                <a href="#"><img src="https://img.zcool.cn/community/01bad25ba0ce97a8012099c8a8f2fe.jpg@2o.jpg" alt=""></a>
             </li>
              <li>
-                <a href="#"><img src="./images/5.jpg" alt=""></a>
+                <a href="#"><img src="https://img.zcool.cn/community/013ec960e7c22411013f4720af7360.jpg@3000w_1l_0o_100sh.jpg" alt=""></a>
             </li>
         </ul>
         <ul class="lis">
@@ -232,7 +226,7 @@
               >
             </h2>
             <p>
-              　野生动物是人类赖以生存的生态系统的重要组成部分。保护、发展和合理利用野生动物资源，对于维护生态平衡，改善自然环境，促进社会经济持续、稳定发展意义重大。
+            野生动物是人类赖以生存的生态系统的重要组成部分。保护、发展和合理利用野生动物资源，对于维护生态平衡，改善自然环境，促进社会经济持续、稳定发展意义重大。
             </p>
           </div>
         </div>
@@ -246,9 +240,7 @@
               >
             </h2>
             <p>
-              峨眉仙酒业有限公司成立于2013年，是一家新型综合酒企业。公司总部坐落于中国西南部四川省乐山市。
-              公司致力于葡萄酒、果酒、其他酒类生产，代加工，灌装，贴牌及销售等，厂地占地20亩，标准生产厂房超5000平，
-              年产量可达5000吨。是四川非遗和物质文化传承基地和果酒产业技术创新战略联盟副理事长单位。
+              峨眉仙酒业有限公司成立于2013年是一家新型综合酒企业。公司总部坐落于中国西南部四川省乐山市。公司致力于葡萄酒、果酒、其他酒类生产代加工灌装贴牌及销售等厂地占地20亩标准生产厂房超5000平年产量可达5000吨。是四川非遗和物质文化传承基地和果酒产业技术创新战略联盟副理事长单位。
             </p>
           </div>
         </div>
