--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         <button class="submit-btn">提交</button>
       </div>
     </div>
-    <script src="答题.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
